# flix

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  CNAME  Makefile  README.md  arduino-cli.yaml  index.html  platformio.ini
.github/workflows/: build.yml  docs.yml  tools.yml
docs/: .markdownlint.json  Makefile  alerts.py  assembly.md  book.css  book.toml  build.md  esp32-c3-supermini.md  firmware.md  js.js  log.md  rotation.css  simulator-wsl2.md  troubleshooting.md  usage.md  user.md  version0.md  zoom.js
docs/assets/: esp32-holder.step  esp32-holder.stl  flix-frame-1.1.step  flix-frame-1.1.stl  flix-frame.step  flix-frame.stl  washer-m3.step  washer-m3.stl
docs/book/: README.md  SUMMARY.md  firmware.md  geometry.md  gyro.md  index.md
docs/book/js/: rotation.js
docs/theme/: index.hbs
flix/: cli.cpp  cli.ino  config.h  control.cpp  control.ino  estimate.cpp  estimate.ino  failsafe.ino  flix.h  flix.ino  fuzzy.h  imu.cpp  imu.ino  led.cpp  led.ino  log.cpp  log.ino  lpf.h  mavlink.cpp  mavlink.ino  motors.cpp  motors.ino  parameters.cpp  parameters.ino  pid.h  pid.hpp  power.ino  quaternion.h  quaternion.hpp  rc.cpp  rc.ino  safety.cpp  safety.ino  test_motors.ino  time.cpp  time.ino  util.h  util.ino  vector.h  voltage_measure.ino  (+2 more)
gazebo/: Arduino.h  CMakeLists.txt  ESP32_NOW_Serial.h  MPU9250.h  Preferences.h  README.md  SBUS.h  arduino.hpp  flix.cpp  flix.h  flix.hpp  flix.world  joystick.h  simulator.cpp  turnigy.hpp  util.h  wifi.h
gazebo/models/flix/: flix.sdf  flix.stl  flix0.dae  model.config
gazebo/models/floor/: floor.sdf  model.config
gazebo/models/floor/materials/scripts/: floor.material
gazebo/models/linnmon/: linnmon.dae  linnmon.sdf  model.config
gazebo/soc/: rtc_cntl_reg.h  soc.h
mini whoop frame v1/: 8.5mmMotorGrommet.stl  8.5mmMotorLandingSkid.stl  LandingGrommet.stl  SUPRFRK.stl  es32-s3-nano holder.stl
rc_control_v1/: rc_control_v1.1  readme.md
tools/: check_c_cpp_properties.py  cli.py  csv_to_mcap.py  example.py  fft.py  grab_log.py  log.py  log_to_csv.py  pyproject.toml  requirements.txt
tools/csv_to_ulog/: CMakeLists.txt  README.md  csv_to_ulog.cpp
tools/espnow-proxy/: README.md  espnow-proxy.ino
tools/pyflix/: README.md  __init__.py  flix.py  proxy.py
