[project]
name = "pyflix"
version = "0.9"
description = "Python API for Flix drone"
authors = [{ name="Oleg Kalachev", email="okalachev@gmail.com" }]
license = "MIT"
readme = "pyflix/README.md"
requires-python = ">=3.8"
dependencies = [
    "pymavlink",
]

[project.scripts]
flix-proxy = "pyflix.proxy:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pyflix"]

[tool.setuptools.package-data]
pyflix = ["README.md"]

[project.urls]
Homepage = "https://github.com/okalachev/flix/tree/master/tools/pyflix"
Repository = "https://github.com/okalachev/flix"
Issues = "https://github.com/okalachev/flix/issues"
